--- a/Eindwerk Nieuw Nieuw/Home.html
+++ b/Eindwerk Nieuw Nieuw/Home.html
@@ -12,7 +12,7 @@
         <div class="logo">Pita Pitstop</div>
         <div class="menu">
           <a href="#">Home</a>
-          <a href="#">Menu</a>
+          <a href="#">Menu</a> <!--Bij drukken pagina scrollt naar beneden, bovenaan staat een foto-->
           <a href="#">Over Ons</a>
           <a href="#">Contact</a>
           <a href="#">Bestellen</a>
