--- a/Eindwerk Nieuw Nieuw/index.html
+++ b/Eindwerk Nieuw Nieuw/index.html
@@ -19,8 +19,9 @@
             <a href="#">Contact</a>
             <a href="#">Bestellen</a>
             <a href="#">Winkelwagen</a>
-            <a href="login.php">Inloggen</a>
+            <a href="signupForm.php">SignUp</a>
         </div>
+
         <div class="hamburger-menu">
             <div class="line"></div>
             <div class="line"></div>
